fix: add spacing to file input wrapper for error message

--- a/src/components/InformationRequests/InformationRequestForm/InformationRequestForm.module.scss
+++ b/src/components/InformationRequests/InformationRequestForm/InformationRequestForm.module.scss
@@ -24,8 +24,7 @@
 }
 
 .fileInputWrapper {
-  margin-top: toRem(-16);
-  margin-bottom: toRem(-16);
+  padding: 0 toRem(16);
 }
 
 .divider {
